2007-10-28  Derek Price  <derek@ximbiot.com>

	* server.h (TRACE_PTR): Abstract cross-platform printing of pointers.
	* hash.c, recurse.c, tag.c: Use new macro.

2007-09-12  Derek Price  <derek@ximbiot.com>

	* server.h (TRACE_MINUTIA): Add new trace level.
	* server.c (cvs_trace_i, cvs_trace_ia): New internal functions.
	(cvs_trace): Trace the PWD when tracing minutia.

	* sanity.sh (edit-check): Update to compensate for quoting introduce
	by last commit.

	* commit.c: Misc cleanup.  Use GNULIB's quote(), if not consistently.
	* edit.c: Alphabetize includes.
	* recurse.c (start_recursion): Use new enum lock_type and make
	UPDATE_PRELOAD const.  Use TRACE_NULL in traces.
	* recurse.h (enum lock_type): New type replacing...
	(CVS_LOCK_NONE, CVS_LOCK_READ, CVS_LOCK_WRITE): ...these macros.
	(W_LOCAL, W_ATTIC, W_REPOS): Clean up.
	(start_recursion): Update prototype per recurse.c.

	* subr.h (STRNEQ): New macro.
	* add.c, admin.c, checkout.c, client.c, commit.c, create_adm.c,
	cvsrc.c, edit.c, entries.c, fileattr.c, find_names.c, history.c,
	ignore.c, lock.c, logmsg.c, parseinfo.c, patch.c, rcs.c, repos.c,
	root.c, server.c, subr.c, update.c, watch.c: Use STRNEQ.  Some
	cleanup.

	* subr.h (STREQ): New macro.
	* add.c, admin.c, annotate.c, base.c, checkin.c, checkout.c,
	classify.c, client.c, commit.c, create_adm.c, diff.c, edit.c,
	entries.c, expand_path.c, filesubr.c, find_names.c, hardlink.c,
	hash.c, history.c, ignore.c, import.c, lock.c, log.c, login.c,
	logmsg.c, ls.c, main.c, mkmodules.c, no_diff.c, parseinfo.c, patch.c,
	rcs.c, rcscmds.c, recurse.c, root.c, run.c, server.c, sign.c, subr.c,
	tag.c, update.c, verify.c, vers_ts.c, watch.c, wrapper.c: Use STREQ.
	Some cleanup.

	* edit.c: Alphabetize includes.
	* entries.c, find_names.c, update.c: Gratuitous cleanup.
	* sanity.sh (errmsg2-16): Fix bug from previous commit.

	* update.c: Include GNULIB's "quote.h".

	* main.c (main): Use xstrdup in preference to strdup.
