@@ -1,4 +1,4 @@
-@set UPDATED 19 October 2007
+@set UPDATED 28 October 2007
 @set UPDATED-MONTH October 2007
 @set EDITION 1.12.13.1
 @set VERSION 1.12.13.1
